# generustive

./: .gitignore  .rustfmt.toml  Cargo.toml
src/: geometry.rs  main.rs
src/draw/: digital.rs  mod.rs
src/draw/digital/: color.rs  mod.rs
src/geometry/: angle.rs  bb.rs  circle.rs  line.rs  mod.rs  poisson_disc.rs  vec2.rs
src/geometry/core/: circle.rs  line.rs  mod.rs  polygon.rs  transformation.rs  vec2.rs
src/numerics/interpolation/: mod.rs
