[package]
name = "generustive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.17.0", features = ["png"] }

rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
